Fixed the login page, working on mobile layout

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -596,6 +596,9 @@ header{
   float: left;
 }
 
+.submitSectionFit{
+  height: auto;
+}
 
 .formSubmit{
   height: 300px;
